[gd_scene load_steps=13 format=2]

[ext_resource path="res://Animations/Crab Walk/CrabMoving3.png" type="Texture" id=1]
[ext_resource path="res://Animations/Crab Walk/CrabMoving4.png" type="Texture" id=2]
[ext_resource path="res://Animations/Crab Walk/CrabMoving2.png" type="Texture" id=3]
[ext_resource path="res://Animations/Crab Walk/CrabMoving1.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Crab.gd" type="Script" id=5]
[ext_resource path="res://Animations/Crab Attack/Crab_Attack1.png" type="Texture" id=6]
[ext_resource path="res://Animations/Crab Attack/Crab_Attack2.png" type="Texture" id=7]
[ext_resource path="res://Animations/Crab Attack/Crab_Attack3.png" type="Texture" id=8]
[ext_resource path="res://Animations/Crab Attack/Crab_Attack4.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 9 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "CrabAttack",
"speed": 20.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "CrabWalk",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.25, 9.5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 4
collision_mask = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 4 )

[node name="CrabSheet" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "CrabAttack"
frame = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.25, -0.5 )
shape = SubResource( 3 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 8

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
